--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body{
-    background-color: aquamarine;
+    background-color: white;
+}
+
+.img-cabeçalho{
+    height: 200px;
+}
+
+.item-cabeçalho{
+    color: blueviolet;
+}
+
+.cabeçalho{
+    display: flex;
 }
