--- a/style.css
+++ b/style.css
@@ -1,15 +1,25 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color: white;
 }
 
+header{
+    background-color: aquamarine;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.item-lista-cabeçalho{
+    display: inline-block;
+    margin: 0 15px;
+    font-size: 25px;
+}
 .img-cabeçalho{
     height: 200px;
-}
-
-.item-cabeçalho{
-    color: blueviolet;
-}
-
-.cabeçalho{
-    display: flex;
 }
