--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 header{
-    background-color: aquamarine;
+    background-color: rgb(232, 246, 243);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -23,3 +23,4 @@ header{
 .img-cabeçalho{
     height: 200px;
 }
+
