--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header{
 
 .principal{
     background-image: linear-gradient(rgb(232, 246, 243), white);
+    display: flex;
 }
 
 .imagem-principal{
