--- a/style.css
+++ b/style.css
@@ -27,8 +27,16 @@ header{
 .principal{
     background-image: linear-gradient(rgb(232, 246, 243), white);
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
 .imagem-principal{
     width: 500px;
+}
+
+.div-principal{
+    width: 35%;
+}
+.paragrafo{
+    text-align: justify;
 }
